--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,12 @@
 {
+  "manifest_version": 2,
   "name": "Pop-up History",
-  "version": "0.0.4",
+  "version": "0.1.0",
   "description": "Pop-up a History",
   "browser_action": {
     "default_icon": "icon.png",
     "default_title": "Pop-up a history",
-    "popup": "popup.html"
+    "default_popup": "popup.html"
   },
   "icons": {
     "128": "app_icon_128.png",
