--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
-  "manifest_version": 2,
+  "manifest_version": 3,
   "name": "Pop-up History",
-  "version": "0.2.2",
+  "version": "0.3.0",
   "description": "Pop-up a History",
-  "browser_action": {
+  "action": {
     "default_icon": "icon.png",
     "default_title": "Pop-up a history",
     "default_popup": "popup.html"
@@ -17,7 +17,10 @@
   "permissions": [
     "history",
     "tabs",
-    "chrome://favicon/"
+    "favicon"
   ],
-  "options_page": "options.html"
+  "options_ui": {
+    "page": "options.html",
+    "open_in_tab": true
+  }
 }
